[package]
name = "funnel-web"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/FishAndRips/funnel-web"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
libm = { version = "0.2.15", default-features = false }
serde = { version = "1.0", optional = true, features = ["derive"] }
